@@ -1,3 +1,7 @@
+2009-09-21  Marek Habersack  <mhabersack@novell.com>
+
+	* mod_mono.8.in: documented MonoCheckHiddenFiles
+
 2009-03-08  Marek Habersack  <mhabersack@novell.com>
 
 	* mod_mono.8.in: added documentation for the new MonoIOMAP
